more work on dissertation

--- a/doc/dissertation/chapter2.tex
+++ b/doc/dissertation/chapter2.tex
@@ -3,7 +3,7 @@
 %===============================================================================
 \section{Model Equations}
 %===============================================================================
-\subsection{General Conservation Law Systems}
+\subsection{Conservation Law Systems}
   \input{content/preliminaries/conservation_laws}
 \subsection{Scalar Conservation Laws}
   \input{content/preliminaries/scalar}
@@ -37,7 +37,7 @@
   \input{content/low_order/m_matrix}
 \subsection{Discrete Maximum Principles\label{sec:DMP}}
   \input{content/low_order/steadystate_DMP}
-%  \input{content/low_order/explicit_DMP}
+  \input{content/low_order/explicit_DMP}
 %  \input{content/low_order/theta_DMP}
 %===============================================================================
 \section{High-Order Schemes}  
@@ -53,6 +53,10 @@
 %===============================================================================
 \section{FCT Schemes}  
 %===============================================================================
+%\subsection{The FCT System}
+%  \input{content/fct/fct_system}
+%\subsection{Limiting Coefficients}
+%  \input{content/fct/limiting coefficients}
 %===============================================================================
 \section{Implementation}  
 %===============================================================================
